# hjLabs.in-spec-kit

./: .eslintrc.js  .gitignore  CLAUDE.md  MANIFEST.in  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.specify/: config.json
logs/: .8929a066e1e20cab48ddbfa9c509b48984514299-audit.json
specs/: README.md
specs/001-ai-model-switching/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-model-switching/contracts/: cli-commands.md  ui-components.md
specs/002-add-a-simple/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-a-simple/contracts/: hello-command.contract.ts  hello-service.contract.ts
src/cli/: DetectProjectCommand.ts  InitProjectCommand.ts  ListModelsCommand.ts  ResetProjectCommand.ts  SwitchModelCommand.ts  TrackTasksCommand.ts  index.ts
src/lib/ui/: LayoutManager.ts  TaskTrackingSidebar.ts
src/models/: AIModelSettings.ts  MigrationState.ts  ProjectConfig.ts  TaskState.ts
src/services/: ConfigManager.ts  ModelSwitcher.ts  ProjectDetector.ts  TaskTracker.ts
src/specify_cli/: __init__.py  package.json
src/specify_cli/js_cli/: bundle.js
src/specify_cli/js_cli/cli/: DetectProjectCommand.d.ts  DetectProjectCommand.d.ts.map  DetectProjectCommand.js  DetectProjectCommand.js.map  ListModelsCommand.d.ts  ListModelsCommand.d.ts.map  ListModelsCommand.js  ListModelsCommand.js.map  ResetProjectCommand.d.ts  ResetProjectCommand.d.ts.map  ResetProjectCommand.js  ResetProjectCommand.js.map  SwitchModelCommand.d.ts  SwitchModelCommand.d.ts.map  SwitchModelCommand.js  SwitchModelCommand.js.map  TrackTasksCommand.d.ts  TrackTasksCommand.d.ts.map  TrackTasksCommand.js  index.d.ts  index.js  (+3 more)
tests/: setup.ts
tests/contract/: cli-detect-project.test.ts  cli-list-models.test.ts  cli-reset-project.test.ts  cli-switch-model.test.ts  cli-track-tasks.test.ts  ui-model-switch-dialog.test.ts  ui-progress-indicator.test.ts  ui-project-detection-panel.test.ts  ui-task-tracking-sidebar.test.ts
(+40 files in other folders)
