[project]
name = "hjlabs-specify"
version = "0.1.0"
description = "AI Model Switching and Task Tracking CLI for Spec-Driven Development"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]
include = [
    "dist/**/*",
    "package.json",
    "node_modules/**/*"
]

[tool.hatch.build.sources]
"src" = ""
"dist" = "dist"
"package.json" = "package.json"