[project]
name = "hjlabs-specify"
version = "0.2.0"
description = "Enhanced Specify CLI with AI Model Switching and JavaScript Bridge - hjLabs Edition"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

[tool.hatch.build.targets.wheel.force-include]
".specify" = "specify_cli/.specify"
".claude" = "specify_cli/.claude"
"dist/cli/bundle.js" = "specify_cli/js_cli/bundle.js"
